<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ZYLauncher</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="shortcut_not_available">Shortcut isn\'t available</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="long_accessible_way_to_add">Double-tap &amp; hold to pick up a widget or use custom actions.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="widget_accessible_dims_format">%1$d wide by %2$d high</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="all_apps_no_search_results">No Apps found matching \"<xliff:g example="Android" id="query">%1$s</xliff:g>\"</string>
    <string name="all_apps_search_market_message">Search for more apps</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps list</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="remove_drop_target_label">Remove</string>
    <string name="uninstall_drop_target_label">Uninstall</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permdesc_uninstall_shortcut">Allows an app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="msg_no_phone_permission"><xliff:g example="Launcher3" id="app_name">%1$s</xliff:g> is not allowed to make phone calls</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Folder</string>
    <string name="disabled_app_label">Disabled <xliff:g example="Messenger" id="app_name">%1$s</xliff:g></string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="workspace_new_page">New home screen page</string>
    <string name="folder_opened">Folder opened, <xliff:g example="5" id="width">%1$d</xliff:g> by <xliff:g example="3" id="height">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Tap to close folder</string>
    <string name="folder_tap_to_rename">Tap to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="msg_disabled_by_admin">Disabled by your admin</string>
    <string name="accessibility_action_overview">Overview</string>
    <string name="allow_rotation_title">Allow Home screen rotation</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_blocked_desc">Current Display setting doesn\'t permit rotation</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="app_downloading_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> downloading, <xliff:g example="30%" id="progress">%2$s</xliff:g> complete</string>
    <string name="app_waiting_download_title"><xliff:g example="Messenger" id="name">%1$s</xliff:g> waiting to install</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="move_to_empty_cell">Move to row <xliff:g example="1" id="number">%1$s</xliff:g> column <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="move_to_position">Move to position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="move_to_hotseat_position">Move to favorites position <xliff:g example="1" id="number">%1$s</xliff:g></string>
    <string name="item_moved">Item moved</string>
    <string name="add_to_folder">Add to folder: <xliff:g example="Games" id="name">%1$s</xliff:g></string>
    <string name="add_to_folder_with_app">Add to folder with <xliff:g example="Messenger" id="name">%1$s</xliff:g></string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="create_folder_with">Create folder with: <xliff:g example="Game" id="name">%1$s</xliff:g></string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="widget_resized">Widget resized to width <xliff:g example="2" id="number">%1$s</xliff:g> height <xliff:g example="1" id="number">%2$s</xliff:g></string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="shortcuts_menu_description"><xliff:g id="number_of_shortcuts" example="3">%1$d</xliff:g> shortcuts for <xliff:g id="app_name" example="Messenger">%2$s</xliff:g></string>
    <string name="folder_import_addicon">Add Apps</string>
    <string name="clock_launcher_label">"Launcher Clock"</string>
    <string name="hide_folder_confirm">Dismiss</string>
    <string name="folder_importmode_button">Add to the folder(<xliff:g id="count">%d</xliff:g>)</string>
    <string name="safemode_wallpaper_error">WallpaperPicker disabled in Safe mode</string>
    <string name="menu_clearup_dialog_title">Icon Aline</string>
    <string name="menu_clearup_dialog_msg">Aline desktop icons or not？</string>
    <string name="cancel_action">"No"</string>
    <string name="confirm_action">"Yes"</string>
    <string name="valcants_button_text">Click to aline icons</string>
    <string name="arrange_button_text">Arrange icons</string>
    <string name="appwidget_text">20:24</string>
    <string name="add_widget">Add widget</string>
    <string name="launcher_clock_time_format">"MMMM dd/HH:mm/EEEE/aa"</string>
    <string name="aline_toast_text">icons alined</string>
    <string name="new_folder_text">New Folder</string>
    <string name="dym_calendar_week_format">EEE</string>
    <string name="default_folder">protruly app</string>
    <string name="default_folder_tools">Tools</string>
    <string name="other_folder">other apps</string>
    <string name="xml_default_folder">com.android.zylauncher:string:default_folder</string>
    <string name="xml_default_folder_tools">com.android.zylauncher:string:default_folder_tools</string>
    <string name="xml_other_folder">com.android.zylauncher:string:other_folder</string>
    <string name="theme_loding_text">theme loading ...</string>
    <string name="special_effect_setting">Special effects settings</string>
    <string name="cycle_slide">Loop desktop</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="layout">Layout</string>
    <string name="hide_app_title">Hide apps</string>
    <string name="overview_tab_personalise">Personalise</string>
    <string name="overview_tab_widget">Widgets</string>
    <string name="overview_tab_hide_app">Hide app</string>
    <string name="overview_tab_ohter">Others</string>
    <string name="overview_tab_hide_app_empty">Touch screen to add icons</string>
</resources>