<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal|bottom"
    android:layout_marginBottom="@dimen/overview_panel_bottom_margin"
      android:gravity="top"
      android:orientation="horizontal" >

    <com.android.launcher3.colors.ChameleonTextView
        android:id="@+id/valcants_clear_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_valcants_clear"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:stateListAnimator="@animator/overview_button_anim"
        android:maxLines="1"
        android:text="@string/arrange_button_text"
        android:textAllCaps="true"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <com.android.launcher3.colors.ChameleonTextView
        android:id="@+id/wallpaper_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_wallpaper"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:stateListAnimator="@animator/overview_button_anim"
        android:maxLines="1"
        android:text="@string/wallpaper_button_text"
        android:textAllCaps="true"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <com.android.launcher3.colors.ChameleonTextView
        android:id="@+id/widget_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_widget"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:stateListAnimator="@animator/overview_button_anim"
        android:maxLines="1"
        android:text="@string/widget_button_text"
        android:textAllCaps="true"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <com.android.launcher3.colors.ChameleonTextView
        android:id="@+id/special_effect_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_special_effect"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:stateListAnimator="@animator/overview_button_anim"
        android:maxLines="1"
        android:text="@string/special_effect_setting"
        android:textAllCaps="true"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

    <com.android.launcher3.colors.ChameleonTextView
        android:id="@+id/hide_app_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_hide_app"
        android:ellipsize="end"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:stateListAnimator="@animator/overview_button_anim"
        android:text="@string/hide_app_title"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone"/>

    <com.android.launcher3.colors.ChameleonTextView
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawablePadding="4dp"
        android:drawableTop="@drawable/ic_setting"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:stateListAnimator="@animator/overview_button_anim"
        android:maxLines="1"
        android:text="@string/settings_button_text"
        android:textAllCaps="true"
        android:ellipsize="end"
        android:textColor="@android:color/white"
        android:textSize="12sp" />
</LinearLayout>

<!--<com.android.launcher3.OverviewPagedContainer
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:launcher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.android.launcher3.pageindicators.PageIndicatorUnderline xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/overview_pageindicator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wallpaper_indicator_height"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true" />

    <com.android.launcher3.OverviewPagedView
        android:id="@+id/overview_pagedview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/overview_pagedview_height"
        android:layout_gravity="top"
        launcher:pageIndicator="@id/overview_pageindicator">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:weightSum="4">

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/valcants_clear_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_valcants_clear"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/arrange_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/wallpaper_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_wallpaper"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/wallpaper_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/widget_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_widget"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/widget_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/special_effect_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_special_effect"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/special_effect_setting"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:weightSum="4">


            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/hide_app_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_hide_app"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/hide_app_title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/settings_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_setting"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/settings_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </com.android.launcher3.OverviewPagedView>

</com.android.launcher3.OverviewPagedContainer>-->


<!--
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgets_container_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:layout_marginBottom="@dimen/overview_panel_bottom_margin"
    android:gravity="center_vertical"
    android:visibility="gone">

    <ImageView
        android:id="@+id/overview_container_left_indicator"
        android:layout_width="@dimen/widgets_panel_left_indicator_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginRight="@dimen/widget_indicator_padding"
        android:layout_marginTop="@dimen/widget_indicator_top_padding"
        android:src="@drawable/ic_widgets_left_indicator" />

    <com.android.launcher3.OverviewPagedView
        android:id="@+id/overview_pagedview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/overview_pagedview_height"
        android:layout_gravity="top">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:weightSum="4">

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/valcants_clear_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_arrange_menu_zy"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/arrange_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/wallpaper_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_wallpaper_menu_zy"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/wallpaper_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/widget_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_widgets_menu_zy"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/widget_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/special_effect_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_special_effect_menu_zy"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/special_effect_setting"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="6dp"
            android:paddingStart="6dp"
            android:weightSum="4">


            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/hide_app_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_hideapp_menu_zy"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/hide_app_title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <com.android.launcher3.colors.ChameleonTextView
                android:id="@+id/settings_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="4dp"
                android:drawableTop="@drawable/ic_settings_zy"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_horizontal"
                android:maxLines="1"
                android:stateListAnimator="@animator/overview_button_anim"
                android:text="@string/settings_button_text"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </com.android.launcher3.OverviewPagedView>

    <ImageView
        android:id="@+id/overview_container_right_indicator"
        android:layout_width="@dimen/widgets_panel_left_indicator_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:layout_marginLeft="@dimen/widget_indicator_padding"
        android:layout_marginTop="@dimen/widget_indicator_top_padding"
        android:src="@drawable/ic_widgets_right_indicator" />
</FrameLayout>-->
